Updated HandBrake core to 1.1.2. Updated translations.

--- a/VidCoder/Resources/Translations/MiscRes.bs.resx
+++ b/VidCoder/Resources/Translations/MiscRes.bs.resx
@@ -255,5 +255,7 @@
   <data name="ChooseNamePicker" xml:space="preserve">
     <value>Odaberite ime za Izabirač:</value>
   </data>
-  
+  <data name="ExceptionDialogSubTextReported" xml:space="preserve">
+    <value>Program se mora zatvoriti, ali će greška biti automatski prijavljena.</value>
+  </data>
 </root>
