--- a/VidCoder/Resources/Translations/EncodingRes.es.resx
+++ b/VidCoder/Resources/Translations/EncodingRes.es.resx
@@ -1056,24 +1056,58 @@ BICUBIC: Esté es un algoritmo OpenCL de escalamiento acelerado por hardware.</v
   <data name="PaddingLabel" xml:space="preserve">
     <value>Relleno</value>
   </data>
+  <data name="AlignAVStartCheckBox" xml:space="preserve">
+    <value>Alinear inicio de audio y vídeo</value>
+  </data>
+  <data name="AlignAVStartCheckBoxToolTip" xml:space="preserve">
+    <value>Alinea las marcas de tiempo iniciales de todos los flujos de audio y video insertando cuadros en blanco o eliminándolos. Puede mejorar la sincronía de audio y video en reproductores que no respetan las listas de edición MP4.</value>
+  </data>
+  <data name="TabHeader_Container" xml:space="preserve">
+    <value>Contenedor</value>
+  </data>
+  <data name="WindowTitle" xml:space="preserve">
+    <value>Preajuste de codificación: {0}</value>
+    <comment>Label for the encoding settings window.</comment>
+  </data>
+  <data name="AudioEncoder_none" xml:space="preserve">
+    <value>Ninguno</value>
+    <comment>Label for the choice to use no audio encoder. Used in fallback selection.</comment>
+  </data>
+  <data name="SizingModeToolTip" xml:space="preserve">
+    <value>«Automático» escoge el tamaño según límites establecidos. «Manual» permite especificar tamaño y razón de aspecto.</value>
+  </data>
+  <data name="SharpenLabel" xml:space="preserve">
+    <value>Enfocar</value>
+  </data>
+  <data name="DeblockToolTip" xml:space="preserve">
+    <value>Reduce los artefactos de bloque causado por la compresión de vídeo de baja calidad.</value>
+  </data>
   
   
   
   
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="PresetFolder_Custom" xml:space="preserve">
+    <value>Personalizado</value>
+  </data>
+  <data name="PresetFolder_BuiltIn" xml:space="preserve">
+    <value>Incorporado</value>
+  </data>
+  <data name="PresetFolderCreateSubfolderMenuItem" xml:space="preserve">
+    <value>Crear subcarpeta</value>
+  </data>
+  <data name="PrestFolderRenameFolderMenuItem" xml:space="preserve">
+    <value>Cambiar nombre de carpeta</value>
+  </data>
+  <data name="PresetFolderRemoveFolderMenuItem" xml:space="preserve">
+    <value>Eliminar carpeta</value>
+  </data>
+  <data name="DefaultPresetFolderName" xml:space="preserve">
+    <value>Nueva carpeta</value>
+  </data>
+  <data name="ChooseNameSubfolder" xml:space="preserve">
+    <value>Nombre de subcarpeta:</value>
+  </data>
+  <data name="ChooseNewFolderName" xml:space="preserve">
+    <value>Nuevo nombre de carpeta:</value>
+  </data>
 </root>
