--- a/VidCoder/Resources/Translations/EncodingRes.it.resx
+++ b/VidCoder/Resources/Translations/EncodingRes.it.resx
@@ -761,7 +761,7 @@ Per sorgente audio che ha un'ampia gamma dinamica (sequenze molto forti e molto 
     <value>Codificatore</value>
   </data>
   <data name="ChannelLayout" xml:space="preserve">
-    <value>Canale Layout</value>
+    <value>Modalità canali</value>
   </data>
   <data name="SampleRate" xml:space="preserve">
     <value>Frequenza di campionamento</value>
@@ -799,10 +799,10 @@ Per sorgente audio che ha un'ampia gamma dinamica (sequenze molto forti e molto 
     <value>Rimuovere la codifica audio</value>
   </data>
   <data name="AutoPassthroughFallbackLabel" xml:space="preserve">
-    <value>Fallback:</value>
+    <value>Ripiega su:</value>
   </data>
   <data name="AutoPassthroughFallbackToolTip" xml:space="preserve">
-    <value>Passthrough non funziona su tutti i codec audio. Questo specifica l'encoder per ripiegare se la traccia non può essere passata attraverso.</value>
+    <value>La funzione Passante non è disponibile per tutti i codificatori audio. Qui potete specificare il codificatore da utilizzare se la traccia audio non può essere passata così com'è.</value>
   </data>
   <data name="EncoderSettings" xml:space="preserve">
     <value>Impostazioni codificatore</value>
@@ -838,7 +838,7 @@ Per sorgente audio che ha un'ampia gamma dinamica (sequenze molto forti e molto 
     <value>Automatico</value>
   </data>
   <data name="PassthroughScopeToolTip" xml:space="preserve">
-    <value>Specifica il codec che il passthrough applicherà all'input.</value>
+    <value>Specifica a quali codificatori in ingresso si può applicare la funzione di Passante.</value>
   </data>
   <data name="FlipHorizontalCheckBox" xml:space="preserve">
     <value>Rifletti orizzontalmente</value>
@@ -865,10 +865,10 @@ Per sorgente audio che ha un'ampia gamma dinamica (sequenze molto forti e molto 
     <value>Capovolge l'immagine verticalmente. Questo è applicato prima di qualsiasi rotazione.</value>
   </data>
   <data name="PassthroughIfPossibleCheckBox" xml:space="preserve">
-    <value>Passthrough se possibile</value>
+    <value>Passante se possibile</value>
   </data>
   <data name="PassthroughIfPossibleToolTip" xml:space="preserve">
-    <value>Se all'ingresso della pista corrisponde il codec, verrà passato attraverso anziché codificato.</value>
+    <value>Se il codificatore della traccia d'ingresso corrisponde a questi, la traccia sarà passata direttamente senza essere ri-codificata.</value>
   </data>
   <data name="RotationLabel" xml:space="preserve">
     <value>Rotazione:</value>
@@ -887,7 +887,7 @@ Per sorgente audio che ha un'ampia gamma dinamica (sequenze molto forti e molto 
     <value>Configurazione Passante</value>
   </data>
   <data name="PassthroughMaskLabel" xml:space="preserve">
-    <value>Permetti il Passante per:</value>
+    <value>Permetti la funzione di Passante per:</value>
   </data>
   <data name="Passthrough_aac" xml:space="preserve">
     <value>AAC</value>
