--- a/VidCoder/Resources/Translations/MainRes.bs.resx
+++ b/VidCoder/Resources/Translations/MainRes.bs.resx
@@ -605,6 +605,12 @@
 
 {0}</value>
   </data>
-  
-  
+  <data name="FileSizeColumnHeader" xml:space="preserve">
+    <value>Veličina</value>
+    <comment>Used on the "completed encodes" tab, to label the column that shows the final output file size.</comment>
+  </data>
+  <data name="OpenAppDataFolder" xml:space="preserve">
+    <value>Otvori mapu sa datotekama aplikacije</value>
+    <comment>Menu choice for opening the application data folder (that holds the VidCoder database file, logs, etc)</comment>
+  </data>
 </root>
