Added a right click option to completed items to retry failed items.

--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -649,4 +649,7 @@
     <value>Scanning {0}...</value>
     <comment>{0} is the name of the source being scanned.</comment>
   </data>
+  <data name="RetryFailedItemsMenuItem" xml:space="preserve">
+    <value>Retry all failed items</value>
+  </data>
 </root>
