--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -652,16 +652,20 @@
   <data name="RetryFailedItemsMenuItem" xml:space="preserve">
     <value>Retry all failed items</value>
   </data>
-  <data name="StartChapterHelpText" xml:space="preserve">
+  <data name="StartChapterAutomationName" xml:space="preserve">
     <value>Start chapter</value>
     <comment>Narrator label for the chapter start combo box</comment>
   </data>
-  <data name="EndChapterHelpText" xml:space="preserve">
+  <data name="EndChapterAutomationName" xml:space="preserve">
     <value>End chapter</value>
     <comment>Narrator label for the end chapter combo box</comment>
   </data>
-  <data name="EditChaptersButtonHelpText" xml:space="preserve">
+  <data name="EditChaptersButtonAutomationName" xml:space="preserve">
     <value>Edit chapters</value>
     <comment>Help text for screen readers for the Edit chapters button</comment>
+  </data>
+  <data name="TitleFilterRangeStartAutomationName" xml:space="preserve">
+    <value>Title filter range start minutes</value>
+    <comment>Screen reader text for number box that represents the start of the filter range in minutes. The number chosen in this box represents the minimum title length in minutes that will be chosen.</comment>
   </data>
 </root>
