Added button on encoding settings to apply the current settings to the queue. Removed modal dialog asking if user wants to apply changes to queue.

--- a/VidCoder/Resources/EncodingRes.resx
+++ b/VidCoder/Resources/EncodingRes.resx
@@ -1173,4 +1173,7 @@ Lapsharp sharpens using convolution kernels approximating Laplacian edge filters
     <value>Pixel aspect ratio denominator</value>
     <comment>Name for the pixel aspect ratio denominator box for screen readers</comment>
   </data>
+  <data name="ApplyToQueueButton" xml:space="preserve">
+    <value>Apply to queue</value>
+  </data>
 </root>
