Updater now discards a downloaded update if a newer version is available. When source audio bitrate is not known, we now display "unknown" instead of "0"

--- a/VidCoder/Resources/CommonRes.resx
+++ b/VidCoder/Resources/CommonRes.resx
@@ -310,4 +310,8 @@ A full copy of the GNU General Public License has been included along with this 
     <value>Open split button</value>
     <comment>Automation name for screen readers for the "open" arrow on a split button</comment>
   </data>
+  <data name="Unknown" xml:space="preserve">
+    <value>Unknown</value>
+    <comment>Used when a value is not known.</comment>
+  </data>
 </root>
