Added Picker feature to choose audio and subtitle tracks by index.

--- a/VidCoder/Resources/CommonRes.resx
+++ b/VidCoder/Resources/CommonRes.resx
@@ -314,4 +314,7 @@ A full copy of the GNU General Public License has been included along with this 
     <value>Unknown</value>
     <comment>Used when a value is not known.</comment>
   </data>
+  <data name="DefaultLabel" xml:space="preserve">
+    <value>Default:</value>
+  </data>
 </root>
