--- a/VidCoder/Resources/OptionsRes.resx
+++ b/VidCoder/Resources/OptionsRes.resx
@@ -392,4 +392,7 @@
     <value>Theme</value>
     <comment>Label for the app theme (auto, light, dark)</comment>
   </data>
+  <data name="PromptForUpdatesLabel" xml:space="preserve">
+    <value>Prompt for updates:</value>
+  </data>
 </root>
