Made a "General" logger * All messages not associated with an encode or scan are directed there * Added to log list automatically

--- a/VidCoder/Resources/LogRes.resx
+++ b/VidCoder/Resources/LogRes.resx
@@ -123,4 +123,7 @@
   <data name="LogWindowTitle" xml:space="preserve">
     <value>Log</value>
   </data>
+  <data name="GeneralLogLabel" xml:space="preserve">
+    <value>General</value>
+  </data>
 </root>
