--- a/VidCoder/Resources/LogRes.resx
+++ b/VidCoder/Resources/LogRes.resx
@@ -132,4 +132,11 @@
   <data name="LogVerbosity_Extended" xml:space="preserve">
     <value>Extended</value>
   </data>
+  <data name="CopyToPastebinButton" xml:space="preserve">
+    <value>Copy Pastebin link</value>
+    <comment>Label for button that copies the log to Pastebin and puts the URL on the clipboard.</comment>
+  </data>
+  <data name="PastebinSuccessStatus" xml:space="preserve">
+    <value>Link to log on Pastebin has been copied to the clipboard.</value>
+  </data>
 </root>
