--- a/VidCoder/Resources/EncodingRes.resx
+++ b/VidCoder/Resources/EncodingRes.resx
@@ -1151,7 +1151,7 @@ Lapsharp sharpens using convolution kernels approximating Laplacian edge filters
     <value>High Performance</value>
   </data>
   <data name="PickColorButton" xml:space="preserve">
-    <value>Pick color...</value>
+    <value>Pick color…</value>
   </data>
   <data name="Bottom" xml:space="preserve">
     <value>Bottom</value>
